# lottery-sim

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
sim-core/: Cargo.toml
sim-core/src/: cpsf.rs  event.rs  lib.rs  outcome.rs  params.rs  replay.rs  sim.rs  verify.rs
sim-core/tests/: qa_tests.rs
specs/: cpsf_byte_layout.md  event_stream.md  replay_container_format.md  simulation_parameters.md
tools/verify/: Cargo.toml
tools/verify/src/: main.rs
web-harness/: index.html
