[workspace]
resolver = "2"
members = [
    "sim-core",
    "bindings/wasm",
    "tools/verify",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand_pcg = "0.3"
rand = "0.8"
bincode = "1"
uuid = { version = "1", features = ["v4"] }
rapier3d = { version = "0.32", features = ["enhanced-determinism", "serde-serialize"] }
nalgebra = "0.34"
glam = "0.30"
