[package]
name = "lottery-sim-core"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
rand_pcg = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
rapier3d = { workspace = true }
nalgebra = { workspace = true }
glam = { workspace = true }

[[bin]]
name = "gen-replay"
path = "src/bin/gen_replay.rs"

[dev-dependencies]
uuid = { workspace = true }
sha2 = { workspace = true }
