[package]
name = "lottery-sim-wasm"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lottery-sim-core = { path = "../../sim-core" }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
sha2 = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
